objects/APTS_Product_Legal_Language_FL_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the Product Legal language settings for Findlaw</description>
    <fields>
        <fullName>APTS_Product_Codes__c</fullName>
        <description>Holds the comma separated list of product codes</description>
        <label>Product Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Names__c</fullName>
        <description>Holds the comma separated list of product names</description>
        <label>Product Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Short_Term_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells whether the name is applicable for Short term or long term</description>
        <label>Short Term Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Short_Term_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds true when developername for the record is not applicable for Short term variants and does not have a short term variant name</description>
        <label>Short Term Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Legal Language FL Settings</label>
</CustomObject>